--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+     <script src="simpleImg.js"></script>
     <script src="https://www.dukelearntoprogram.com/course1/common/js/image/SimpleImage.js">
     </script>
    <script src="greenscr.js"></script>
